Undefine redirections after long double definition on __LDBL_COMPAT [BZ #23294]

After defining the long double redirections to double, __MATHDECL_1 has
to be redefined to its previous state in order to avoid redirecting all
subsequent types.